--- a/style.css
+++ b/style.css
@@ -1,10 +1,58 @@
+:root{
+    color-scheme: only light;
+}
 
 body{
+    margin-top: 50px;
     display: flex;
     justify-content: center;
+    gap : 40px;
+    background-color: black;
 }
+
+label{
+    text-align: center;
+}
+
+.option-container{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.color-setting{
+    background-color: black;
+    color: white;
+}
+
+
+.slider{
+    width: 400px;
+    height: 50px;
+    background: linear-gradient(to right, #F00, #FF0, #0F0, #0FF, #00F, #F0F, #F00);
+}
+
+.sliderpicker{
+    width: 2px;
+    height: 50px;
+    background-color: white;
+    border-color: black;
+    border-radius: 5px;
+}
+
+
+
+.gradient{
+    height: 400px;
+    width: 400px;
+    background-color: red;
+    background-image:   linear-gradient(to bottom, hsl(0 0% 100%) 0%, hsl(0 0% 100% / 0) 50%, hsl(0 0% 0% / 0) 50%, hsl(0 0% 0%) 100%), linear-gradient(to right, hsl(0 0% 50%) 0%, hsl(0 0% 50% / 0) 100%);
+}
+
 
 .grid{
     display: flex;
     flex-wrap: wrap;
+    background-color: green;
+    overflow: hidden;
 }
