--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body{
     justify-content: center;
     gap : 40px;
     background-color: black;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 label{
@@ -94,6 +100,10 @@ input{
     width:100%;
     border-radius: 20%;
     aspect-ratio: 1;
+}
+
+#button-rainbow{
+    background-color: gray;
 }
 
 
